# PDebloating

./: .gitignore  CMakeLists.txt  README.md  build-pass.txt
include/Commons/ControlDep/: ControlDep.h
include/Commons/Search/: Search.h
include/Debloater/: Debloater.h
include/ID/: IDDumper.h  IDTagger.h
include/Instrumentor/StRWInstrumentor/: StRWInstrumentor.h
lib/: CMakeLists.txt
lib/Commons/: CMakeLists.txt
lib/Commons/ControlDep/: CMakeLists.txt  ControlDep.cpp
lib/Commons/Search/: CMakeLists.txt  Search.cpp
lib/Debloater/: CMakeLists.txt  Debloater.cpp
lib/ID/: CMakeLists.txt  IDDumper.cpp  IDTagger.cpp
lib/Instrumentor/: CMakeLists.txt
lib/Instrumentor/StRWInstrumentor/: CMakeLists.txt  StRWInstrumentor.cpp
runtime/: CMakeLists.txt
runtime/RWLogger/: CMakeLists.txt  RWLogger.cpp
stubs/midilib/: Makefile  RWLogger.c
stubs/midilib/result/: analysis.txt  analyze_result.py  count_remove.py  dynamic.result  m2rtttl.c  m2rtttl.ll  midiReadGetNextMessage.ll  midi_msg.c  midi_msg_s.c  midifile.c  midifile_con.c  output.txt  tmp
stubs/snort-1.0/: AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  config.h.in  configure  configure.in  decode.c  decode.h  log.c  log.h  mstring.c  mstring.h  rules.c  rules.h  snort-lib  snort.c  snort.h
